fix #41, fix vault buttons being misaligned, fix? chat buttons